# peap

./: .gitignore  README.md  pyproject.toml  results.csv
clients/web/web/: package-lock.json
clients/web/web/src/: App.js
dev-env/: Dockerfile  requirements.txt  setup_bash.sh
src/: api.py  config.py  data_store.py  main.py  td.py
tests/: test_main.py  test_peap.py  test_td_row_extractor.py  test_td_statement_period.py
tests/resources/: sample_td.txt  test5.pdf.txt
